Revert "fix(tup-ui): page layout spacing & use global vars"
This reverts commit bdf20fe03fbbecb3eecc71045c388eecbfc4e7ae.

--- a/apps/tup-ui/src/pages/Projects/Projects.module.css
+++ b/apps/tup-ui/src/pages/Projects/Projects.module.css
@@ -1,5 +1,7 @@
 .project-header {
     font-size: 2.6rem;
-    border-bottom: var(--global-border-width--normal) solid var(--global-color-primary--dark);
+    margin-top: 12px;
+    margin-left: 24px;
+    border-bottom: 1px solid #707070;
     padding-bottom: 5px;
 }
